Revert "Merge StandardURLs.plist into Info.plist and update URLs"
This reverts commit 2bf1aefe8e0b01173cc6390b84cc7c0fd19bd6e3.

--- a/Vienna/Interfaces/Base.lproj/MainMenu.xib
+++ b/Vienna/Interfaces/Base.lproj/MainMenu.xib
@@ -551,7 +551,7 @@ CA
                                         <menuItem title="More Styles…" id="2S3-dG-ZPg">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
-                                                <action selector="openStylesPage:" target="-1" id="pk4-6e-u9J"/>
+                                                <action selector="moreStyles:" target="-1" id="pk4-6e-u9J"/>
                                             </connections>
                                         </menuItem>
                                     </items>
@@ -848,7 +848,7 @@ CA
                             </menuItem>
                             <menuItem title="Vienna Web Site" id="929">
                                 <connections>
-                                    <action selector="openHomePage:" target="-1" id="QcX-Jg-MIJ"/>
+                                    <action selector="showViennaHomePage:" target="-1" id="QcX-Jg-MIJ"/>
                                 </connections>
                             </menuItem>
                         </items>
